--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,10 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build
         run: mvn -B verify
-      - name: Upload a Build Artifact
+      - name: Upload dir
         uses: actions/upload-artifact@v4.5.0
         with:
-          # Artifact name
           name: coreprotect
-          # A file, directory or wildcard pattern that describes what to upload
           path: .
           retention-days: 30
           
